@@ -1,3 +1,13 @@
+2004-10-04  Jakub Jelinek  <jakub@redhat.com>
+
+	* gnat_ugn.texi: Add : and . to direntry.
+	* gnat-style.texi: Change dircategory to GNU Ada tools.
+
+2005-02-08  Jakub Jelinek  <jakub@redhat.com>
+
+	* Makefile.in (gnatlib-shared-default): Disallow dlopening of
+	libgnat.so.
+
 2007-12-07  Olivier Hainque  <hainque@adacore.com>
 
 	PR ada/34173
